[package]
name = "jito-tip-router-cli"
description = "Jito MEV Tip Distribution NCN CLI"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }

[[bin]]
name = "jito-tip-router-cli"
path = "src/bin/main.rs"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
borsh = { workspace = true }
bytemuck = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
clap-markdown = { workspace = true }
dotenv = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
jito-bytemuck = { workspace = true }
jito-jsm-core = { workspace = true }
jito-priority-fee-distribution-sdk = { workspace = true }
jito-restaking-client = { workspace = true }
jito-restaking-core = { workspace = true }
jito-restaking-program = { workspace = true }
jito-restaking-sdk = { workspace = true }
jito-tip-distribution-sdk = { workspace = true }
jito-tip-router-client = { workspace = true }
jito-tip-router-core = { workspace = true }
jito-tip-router-program = { workspace = true }
jito-vault-client = { workspace = true }
jito-vault-core = { workspace = true }
jito-vault-program = { workspace = true }
jito-vault-sdk = { workspace = true }
log = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
solana-account-decoder = { workspace = true }
solana-account-info = "3.0.0"
solana-address-lookup-table-interface = { workspace = true }
solana-cli-config = { workspace = true }
solana-client = { workspace = true }
solana-commitment-config = { workspace = true }
solana-compute-budget-interface = { workspace = true }
solana-genesis-config = { workspace = true }
solana-metrics = { workspace = true }
solana-program = { workspace = true }
solana-rpc-client = { workspace = true }
solana-sdk = { workspace = true }
solana-stake-interface = { workspace = true }
solana-system-interface = { workspace = true }
solana-transaction-status = { workspace = true }
spl-associated-token-account-interface = { workspace = true }
spl-token-interface = { workspace = true }
switchboard-on-demand-client = { package = "switchboard-on-demand", version = "0.10.1", default-features = false, features = ["solana-v3", "client-v3"] }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
