[package]
name = "jito-tip-router-core"
description = "Jito's MEV Tip Distribution NCN Core"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }

[dependencies]
borsh = { workspace = true }
bytemuck = { workspace = true }
jito-bytemuck = { workspace = true }
jito-restaking-core = { workspace = true }
jito-vault-core = { workspace = true }
meta-merkle-tree = { workspace = true }
shank = { workspace = true }
solana-decode-error = { workspace = true }
solana-program = { workspace = true }
solana-system-interface = { workspace = true }
spl-math = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
