[package]
name = "gcp_uploader"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A tool to continuously monitor and upload epoch-related files to Google Cloud Storage"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
cloud-storage = "0.11"
env_logger = { workspace = true }
futures-util = "0.3.31"
hostname = "0.3"
log = { workspace = true }
regex = "1.10"
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
solana-client = { workspace = true }
solana-metrics = { workspace = true }
solana-rpc-client = { workspace = true }
