[package]
name = "jito-tip-router-integration-tests"
description = "Jito's MEV Tip Distribution NCN Tests"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }

[dependencies]
jito-tip-router-client = { workspace = true }
log = "0.4.21"
num-derive.workspace = true
num-traits.workspace = true
spl-pod = "0.7.1"

[dev-dependencies]
anyhow = { workspace = true }
borsh = { workspace = true }
bytemuck = { workspace = true }
jito-bytemuck = { workspace = true }
jito-jsm-core = { workspace = true }
jito-priority-fee-distribution-sdk = { workspace = true }
jito-restaking-core = { workspace = true }
jito-restaking-program = { workspace = true }
jito-restaking-sdk = { workspace = true }
jito-tip-distribution-sdk = { workspace = true }
jito-tip-router-core = { workspace = true }
jito-tip-router-program = { workspace = true }
jito-vault-core = { workspace = true }
jito-vault-program = { workspace = true }
jito-vault-sdk = { workspace = true }
meta-merkle-tree = { workspace = true }
shank = { workspace = true }
solana-commitment-config = { workspace = true }
solana-compute-budget-interface = { workspace = true }
solana-program = { workspace = true }
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
solana-security-txt = { workspace = true }
solana-stake-interface = { workspace = true }
solana-system-interface = { workspace = true }
solana-vote-interface = { workspace = true }
spl-associated-token-account-interface = { workspace = true }
spl-token-interface = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

