[package]
name = "meta-merkle-tree"
description = "Meta Merkle Tree"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }

[dependencies]
fast-math = { workspace = true }
hex = { workspace = true }
jito-stake-meta-types = { workspace = true }
jito-vault-core = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-program = { workspace = true }
thiserror = { workspace = true }
wincode = { workspace = true }

[dev-dependencies]
solana-sdk = { workspace = true }
