[package]
name = "jito-priority-fee-distribution-sdk"
description = "SDK for interacting with Jito's Priority Fee Distribution Program via declare_program"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }

[dependencies]
borsh = { workspace = true }
solana-program = { workspace = true }
solana-pubkey = { workspace = true }
solana-sdk = { workspace = true }
