[package]
name = "jito-tip-router-program"
description = "Jito's MEV Tip Distribution NCN Program"
version = "0.1.1"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
name = "jito_tip_router_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
custom-heap = []
custom-panic = []
default = []
mainnet-beta = []
testnet = []
devnet = []
localhost = []

[dependencies]
borsh = { workspace = true }
jito-bytemuck = { workspace = true }
jito-jsm-core = { workspace = true }
jito-priority-fee-distribution-sdk = { workspace = true }
jito-restaking-core = { workspace = true }
jito-restaking-program = { workspace = true }
jito-tip-distribution-sdk = { workspace = true }
jito-tip-router-core = { workspace = true }
jito-vault-core = { workspace = true }
jito-vault-program = { workspace = true }
solana-program = { workspace = true }
solana-security-txt = { workspace = true }
solana-system-interface = { workspace = true }
switchboard-on-demand = { version = "0.11.3", default-features = false, features = ["solana-v3"] }

[dev-dependencies]
assert_matches = { workspace = true }
