[package]
name = "tip-router-operator-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for Jito Tip Router"

[dependencies]
async-trait = "0.1"
anchor-lang.workspace = true
anyhow.workspace = true
bincode = "1.3"
clap.workspace = true
crossbeam-channel = "0.5"
ellipsis-client = "0.1"
env_logger.workspace = true
futures = "0.3"
gethostname = "0.4"
im = "15.1"
itertools = "0.11"
jito-tip-distribution = { git = "https://github.com/exo-tech-xyz/jito-programs.git", rev = "6e5cbce5e2866da0585ef4fa35ee1168fce4556f", features = ["cpi"] }
jito-tip-payment = { git = "https://github.com/exo-tech-xyz/jito-programs.git", rev = "6e5cbce5e2866da0585ef4fa35ee1168fce4556f", features = ["cpi"] }
meta-merkle-tree.workspace = true
solana-account-decoder.workspace = true
solana-accounts-db.workspace = true
solana-client.workspace = true
solana-genesis-utils.workspace = true
solana-ledger.workspace = true
solana-measure.workspace = true
solana-merkle-tree.workspace = true
solana-metrics.workspace = true
solana-program.workspace = true
solana-program-runtime.workspace = true
solana-program-test.workspace = true
solana-rpc-client.workspace = true
solana-rpc-client-api.workspace = true
solana-runtime.workspace = true
solana-sdk.workspace = true
solana-stake-program.workspace = true
solana-transaction-status.workspace = true
solana-vote.workspace = true
solana-cli-config.workspace = true
spl-token.workspace = true
spl-token-2022.workspace = true
spl-memo = "3.0.1"
log.workspace = true
num-traits.workspace = true
rand = "0.8"
serde.workspace = true
serde_json = "1.0"
tempfile = "3.2"
thiserror.workspace = true
tokio.workspace = true
tokio-test = "0.4"

[dev-dependencies]
solana-runtime = { workspace = true, features = ["dev-context-only-utils"] }
solana-sdk = { workspace = true, features = ["dev-context-only-utils"] }
tar = "0.4"
bzip2 = "0.4"