[package]
name = "jito-tip-payment-sdk"
description = "SDK for interacting with Jito's Tip Payment Program"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }

[dependencies]
anyhow = { workspace = true }
borsh = { workspace = true }
solana-program = { workspace = true }
solana-pubkey = { workspace = true }
